--- a/icons/icons.qrc
+++ b/icons/icons.qrc
@@ -2,4 +2,7 @@
   <qresource prefix="granulado">
     <file>white-plain-concrete-textured-background.jpg</file>
   </qresource>
+  <qresource prefix="logo">
+    <file>money-bag.png</file>
+  </qresource>
 </RCC>
