--- a/untitled.ui
+++ b/untitled.ui
@@ -14,8 +14,10 @@
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(255, 250, 250);
-</string>
+   <string notr="true">#MainWindow {
+	
+ 	background-color: rgb(300, 250, 250);
+}</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
@@ -61,6 +63,9 @@
          <layout class="QHBoxLayout" name="horizontalLayout_2">
           <item>
            <widget class="QLabel" name="logo">
+            <property name="styleSheet">
+             <string notr="true">image: url(:/logo/money-bag.png);</string>
+            </property>
             <property name="text">
              <string/>
             </property>
